<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_stickers"
            android:layout_width="1px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/stickers"
            android:textColor="#ffffff"
            android:textSize="@dimen/image_edit_text_size"/>

        <TextView
            android:id="@+id/btn_fliter"
            android:layout_width="1px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/fliter"
            android:textColor="#ffffff"
            android:textSize="@dimen/image_edit_text_size"/>

        <TextView
            android:id="@+id/btn_crop"
            android:layout_width="1px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/crop"
            android:textColor="#ffffff"
            android:textSize="@dimen/image_edit_text_size"/>

        <TextView
            android:id="@+id/btn_rotate"
            android:layout_width="1px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/rotate"
            android:textColor="#ffffff"
            android:textSize="@dimen/image_edit_text_size"/>

        <TextView
            android:id="@+id/btn_text"
            android:layout_width="1px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text"
            android:textColor="#ffffff"
            android:textSize="@dimen/image_edit_text_size"/>
    </LinearLayout>
</LinearLayout>

